--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "build-win": "SET NODE_ENV=production"
+    "build-win": "SET NODE_ENV=test"
   },
-  "license": "Apache-2.0",
   "dependencies": {
     "koa": "2.0.0",
     "koa-bodyparser": "3.2.0",
+    "koa-mysql-session": "0.0.2",
     "koa-router": "7.0.0",
+    "koa-session-minimal": "^3.0.4",
+    "md5": "^2.2.1",
     "mime": "1.3.4",
     "mysql": "2.11.1",
     "mz": "2.4.0",
