--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "koa-router": "7.0.0",
     "koa-session-minimal": "^3.0.4",
     "md5": "^2.2.1",
-    "mime": "1.3.4",
+    "mime": "^2.3.1",
     "mysql": "2.11.1",
     "mz": "2.4.0",
     "nunjucks": "2.4.2",
