--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build-win": "SET NODE_ENV=test"
   },
   "dependencies": {
-    "koa": "2.0.0",
+    "koa": "^2.6.2",
     "koa-bodyparser": "3.2.0",
     "koa-mysql-session": "0.0.2",
     "koa-router": "7.0.0",
     "koa-session-minimal": "^3.0.4",
     "md5": "^2.2.1",
     "mime": "^2.3.1",
-    "mysql": "2.11.1",
+    "mysql": "^2.16.0",
     "mz": "2.4.0",
     "nunjucks": "2.4.2",
     "sequelize": "3.24.1",
